officialDocument batch update & procedureID filter
